Wed, Dec 6, 2023, 8:49 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <link href="/static/styles.css" rel="stylesheet">
+        <title>All Cards</title>
     </head>
     <body>
         <table class="table">
