--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="/static/styles.css" rel="stylesheet">
+        <title>Game board</title>
     </head>
     <body>
         <form action="/gameboard2" method="post">
