--- a/templates/reveal.html
+++ b/templates/reveal.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <meta name="viewport" content="initial-scale=1, width=device-width">
+    <title> Reveal Cards </title>
     <link href="/static/styles.css" rel="stylesheet">
     </head>
     <body>
