Wed, Dec 6, 2023, 8:50 PM -05:00

--- a/templates/harvard.html
+++ b/templates/harvard.html
@@ -30,7 +30,7 @@
                         <option value="{{ place['name'] }}">{{ place['name'] }}</option>
                     {% endfor %}
                 </select>
-                <button name="submit" type="submit">Submit</button>
+                <button type="submit">Submit</button>
             </div>
         </form>
     </body>
