--- a/templates/reveal.html
+++ b/templates/reveal.html
@@ -17,7 +17,7 @@
                         <option value="{{ card['id'] }}">{{ card['name'] }}</option>
                     {% endfor %}
                 </select>
-                <button name="submit" type="submit">Submit</button>
+                <button type="submit">Submit</button>
             </div>
         </form>
     </body>
