Wed, Dec 6, 2023, 9:06 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -6,6 +6,7 @@
         <title>All Cards</title>
     </head>
     <body>
+        <button style="font-size: 40px"><a href="/mycards">Return</a></button>
         <table class="table">
             {% for i in range(3) %}
             <tr>
@@ -19,7 +20,6 @@
             </tr>
             {% endfor %}
         </table>
-            <button><a href="/mycards">Return</a></button>
     </body>
 </html>
 
