Thu, Dec 7, 2023, 3:56 PM -05:00

--- a/templates/reveal.html
+++ b/templates/reveal.html
@@ -20,6 +20,7 @@
                         <option value="{{ card['id'] }}">{{ card['name'] }}</option>
                     {% endfor %}
                 </select>
+                <input type="hidden" name="backup card" value="{{ player_cards[0]['id'] }}">
                 <button type="submit">Submit</button>
             </div>
         </form>
