--- a/templates/reveal.html
+++ b/templates/reveal.html
@@ -20,7 +20,7 @@
                         <option value="{{ card['id'] }}">{{ card['name'] }}</option>
                     {% endfor %}
                 </select>
-                <input type="hidden" name="backup card" value="{{ player_cards[0]['id'] }}">
+                <input type="hidden" name="backup card" value="{{ player_cards[0]['name'] }}">
                 <button type="submit">Submit</button>
             </div>
         </form>
