Thu, Dec 7, 2023, 4:23 PM -05:00

--- a/templates/gameover.html
+++ b/templates/gameover.html
@@ -10,7 +10,7 @@
             <div class="center">
                 <h1 class="header">{{ text }}</h1>
                 <p>It was {{ winning_cards['Person'] }} with the {{ winning_cards['Weapon'] }} in {{ winning_cards['Place'] }}</p>
-                <button name="submit" type="submit">New Game</button>
+                <button type="submit">New Game</button>
             </div>
         </form>
     </body>
